# fastapi

./: main.py  pyproject.toml  requirements.txt
items/: views.py
users/: crud.py  schemas.py  views.py
